@@ -6,6 +6,9 @@
         instead as balloon over Build Status Summary widget.
     </li>
     <li>#270 Multiline String Parameter Turkish Character Problem</li>
+    <li>#240 PT_MULTI_SELECT and PT_CHECKBOX not supported<br>
+        Render Select items as text input
+    </li>
 </ul>
 <h3>0.13.10</h3>
 <ul>
