@@ -12,5 +12,6 @@
         <buildParameterRenderer
                 implementation="org.codinjutsu.tools.jenkins.view.parameter.PersistentParameterRenderer"/>
         <buildParameterRenderer implementation="org.codinjutsu.tools.jenkins.view.parameter.ListGitBranchesParameterRenderer" />
+        <buildParameterRenderer implementation="org.codinjutsu.tools.jenkins.view.parameter.ExtendedChoiceParameterRenderer" />
     </extensions>
 </idea-plugin>
